# anime-cli

./: .gitignore  Cargo.toml  README.md
anime_dl/: Cargo.toml
anime_dl/src/: lib.rs
anime_find/: Cargo.toml
anime_find/src/: lib.rs
src/: anime_dl.rs  anime_find.rs  anime_watch.rs  main.rs
