[package]
name = "anime-cli"
version = "0.1.0"
description = "CLI to find, download and stream anime."
authors = ["Vianney Dupoy de Guitard <vianney@n4v1.com>"]
license = "GPL-3.0"
edition = "2018"
homepage = "https://github.com/DeGuitard/anime-cli"
documentation = "https://github.com/DeGuitard/anime-cli"
repository = "https://github.com/DeGuitard/anime-cli"
keywords = ["anime", "streaming", "cli", "xdcc"]
categories = ["command-line-utilities"]

[dependencies]
getopts = "0.2.19"
lazy_static = "1.3.0"
mpv = "0.2"
pbr = "1.0.1"
regex = "1"
reqwest = "0.9.19"
serde = "1.0.98"
