[package]
name = "anime-cli"
version = "0.1.4"
description = "CLI to find, download and stream anime."
authors = ["Daniel Pham <***REMOVED***>, Vianney Dupoy de Guitard <vianney@n4v1.com>"]
license = "GPL-3.0"
edition = "2018"
homepage = "https://github.com/exKitsune/anime-cli"
documentation = "https://github.com/exKitsune/anime-cli"
repository = "https://github.com/exKitsune/anime-cli"
keywords = ["anime", "streaming", "cli", "xdcc"]
categories = ["command-line-utilities"]

[dependencies]
getopts = "0.2.19"
lazy_static = "1.3.0"
mpv = { version = "0.2.3", optional = true}
pbr = "1.0.1"
regex = "1"
reqwest = "0.9.19"
serde = "1.0.98"
rand = "0.7.3"
opener = "0.4.1"
crossterm = "0.17.3"

[features]
default = ["mpv"]
